# SPL-compiler

./: .gitignore  CMakeLists.txt  README.md  main.cpp  report.docx  scanner.l  test.pas  test.spl  token.h  ~$report.docx
parseTree/: CMakeLists.txt  README.md  makefile  parser.y  scanner.l  token.h  tree.h
sem/: CMakeLists.txt  ConstTable.cpp  ConstTable.h  Func.cpp  Func.h  FuncTable.cpp  FuncTable.h  IdTable.cpp  IdTable.h  LabelTable.cpp  LabelTable.h  README.md  SemError.cpp  SemError.h  SymbolTable.cpp  SymbolTable.h  Type.cpp  Type.h  TypeTable.cpp  TypeTable.h  TypeUtil.cpp  TypeUtil.h  VarTable.cpp  VarTable.h  how_to_use.md  sem.cpp  sem.h  test.cpp
testcases/: case_stmt.spl  expression.spl  for_stmt.spl  proc_stmt.spl  test.spl
testcases/gen_code/: a_plus_b.spl  array_for.spl  bool.spl  const_prop.spl  gcd.spl  misc.spl  nest_func_1.spl  nest_func_2.spl  nest_func_3.spl  rec_var.spl  recursive_func.spl  swap.spl  var_func_1.spl  var_func_2.spl  var_func_3.spl
testcases/sem_check/: assign_stmt.spl  expression.spl  for_stmt.spl  if_stmt.spl  label.spl  proc_stmt.spl
